# portfolio

./: .gitignore  DEMO_SETUP.md  index.html  package-lock.json  package.json  push_to_github.sh  test-ws.html  vite.config.ts
.netlify/: netlify.toml
app/backend/: app.py  demo_controller.py
assets/: index-BpQ3PR3n.css  index-CrsIoNKB.js  index-Dv1fGrS-.js
cv/: cv_en.aux  cv_en.out  cv_en.tex  cv_fr.aux  cv_fr.out  cv_fr.tex  lettre_motivation_en.tex  lettre_motivation_fr.tex
documents/autres/: README.md
experiences_pro/: exemple_code_.txt
projets/healthfile/: CMakeLists.txt  README.md
projets/healthfile/cooking/: CookingClock.pro  main.cpp
projets/healthfile/cooking/header/: MainWindow.h  QAppSettings.h  QCountDown.h  QEditableValue.h  QLCDMouseListener.h
projets/healthfile/cooking/src/: MainWindow.cpp  QAppSettings.cpp  QCountDown.cpp  QEditableValue.cpp  QLCDMouseListener.cpp
projets/healthfile/header/: allergie.h  clinique.h  mainwindow.h  medecin.h  patient.h  personne.h
projets/healthfile/rapport/: Doxyfile  Meta-projet.doc  diagramme_gestion_patients.puml
projets/healthfile/rapport/docs/html/: allergie_8cpp.html  allergie_8cpp__incl.map  allergie_8cpp__incl.md5  allergie_8cpp_source.html  allergie_8h.html  allergie_8h.js  allergie_8h__dep__incl.map  allergie_8h__dep__incl.md5  allergie_8h__incl.map  allergie_8h__incl.md5  allergie_8h_source.html  annotated.html  annotated_dup.js  classAllergie-members.html  classAllergie.html  classAllergie.js  classAllergie__coll__graph.map  classAllergie__coll__graph.md5  classClinique-members.html  classClinique.html  classClinique.js  classClinique__coll__graph.map  classClinique__coll__graph.md5  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.map  classMainWindow__inherit__graph.md5  classMedecin-members.html  classMedecin.html  classMedecin.js  classMedecin__coll__graph.map  classMedecin__coll__graph.md5  classMedecin__inherit__graph.map  classMedecin__inherit__graph.md5  classPatient-members.html  classPatient.html  classPatient.js  (+104 more)
projets/healthfile/rapport/docs/html/search/: all_0.js  all_1.js  all_10.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  (+2 more)
projets/healthfile/resources/: resources.qrc
projets/healthfile/src/: allergie.cpp  clinique.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  medecin.cpp  patient.cpp  personne.cpp
projets/healthfile/translations/: sgm_en.ts
src/: App.tsx
src/components/: About.tsx  Contact.tsx  Documents.tsx  Education.tsx  Experience.tsx  Footer.tsx  Header.tsx  Hobbies.tsx  Navigation.tsx  (+6 more)
(+17 files in other folders)
